Fixed a bug on mobile screens - overflowing element

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,6 +1,12 @@
 @media screen and (max-width: 600px) {
+	body {
+		box-sizing: border-box;
+	}
 	table{
-		font-size: 3vw;
+		box-sizing: border-box;
+	}
+	table{
+		font-size: 2.5vw;
 	}
 }
   
